# actions-latest

./: .gitattributes  README.md  actions-metadata.json  community-actions.txt  community-versions.txt  fetch_versions.py  pyproject.toml  test_actions_latest.py  test_fetch_versions.py  tracked-actions.txt  trusted-actions.txt  unversioned.txt  update.py  versions.txt
.github/workflows/: update.yml
actions_latest/: __init__.py  actions.db  community-versions.txt  server.py  versions.py  versions.txt
